[FIX] Spacing for prices.

--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,17 @@
    ========================================================================== */
 
 .prices button.btn {
-  padding: 2em 4em 2em 3em;
-  margin: 1em 2em 1em 1em;
-  width: 30%;
+  padding: 2em 1em 2em 1em;
+  margin: 1.2em;
+  width: 40%;
   text-align:center;
   border: 1px solid black;
   font-weight:bold;
+}
+
+.prices button.even {
+
+  margin-left: 0.3em;
 }
 
 body {
